@@ -1,0 +1,2 @@
+#define CHECK_TIME64
+#include "tst-lchmod.c"
